custom my index.

--- a/index.html
+++ b/index.html
@@ -30,45 +30,54 @@
 
       </header>
       <section>
-        <h3>歡迎來到凍仁的簡報</h3>
+        <h3>歡迎光臨</h3>
 
 		<p>
-			這裡是凍仁使用 Github Pages 服務所產生的簡報專頁，接下來將於此匯整自家大大小小的簡報，如有漏之處還請來信通知，謝謝。
+			這裡將匯整<a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">凍仁</a>使用 <a href="https://github.com/bartaz/impress.js">impress.js</a> 所建置的簡報，並透過 <a href="https://github.com" target="_blank">Github</a> 來同步本機及網際網路上的檔案。
 		</p>
 
-		<!--
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
+		<h3>線上觀看</h3>
+
+		<p>
+			若您只是線上觀看，您可以直接點選以下連結進行觀看。
+		</p>
+
+		<ul>
+			<li>2013/02/27 - <a href="2013-02-27-about-me.html#/bored" target="_blank">關於 "賴楚翔"</a></li>
+			<li>2012/12/08 - <a href="2012-12-08-clonezilla.html#/bored" target="_blank">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活</a></li>
+		</ul>
+
+		<h3>離線下載</h3>
+
+		<p>
+			若您想下載所有簡報並稍後觀看，您可以使用以下方式下載。
+		</p>
+
+		<h4>藉由 Git 下載</h4>
+
+<pre><code>$ git clone git://github.com/chusiang/impress.js.git
+$ cd impress.js/
 $ git checkout gh-pages
+$ firefox impress.js/index.html
 </code></pre>
-		-->
-		
-		<p>
-			<ul>
-				<li>2012/12/08 <a href="https://dl.dropbox.com/u/1995696/impress.js/2012-12-08-clonezilla.html#/bored">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活 by chusiang | impress.js</a></li>
-			</ul>
-		</p>
 
-<h3>Designer Templates</h3>
+		<h4>藉由 wget 下載</h4>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<pre><code>$ wget <a href="https://github.com/chusiang/impress.js/archive/gh-pages.zip">https://github.com/chusiang/impress.js/archive/gh-pages.zip</a>
+$ unzip gh-pages.zip 
+$ firefox impress.js-gh-pages/index.html
+</code></pre>
 
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
+
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+		  <p>
+			  Power by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>, <a href="https://github.com/broccolini/dinky" target="_blank">Dinky theme</a> and <a href="http://github.com/chusiang" target="_blank">chusiang</a>.
+		  </p>
+	  </footer>
+
     </div>
+
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
   </body>
