--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Impress.js by chusiang</title>
+    <title>chusiang | Impress.js</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,12 +20,12 @@
         <p class="header">It's a presentation framework based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com.</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/chusiang/impress.js/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/chusiang/impress.js/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/chusiang/impress.js">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/bartaz/impress.js/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/bartaz/impress.js/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/bartaz/impress.js">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/chusiang">chusiang</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/bartaz">bartaz</a></p>
 
 
       </header>
