--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
 
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>歡迎來到凍仁的簡報</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		<p>
+			這裡是凍仁使用 Github Pages 服務所產生的簡報專頁，接下來將於此匯整自家大大小小的簡報，如有漏之處還請來信通知，謝謝。
+		</p>
 
+		<!--
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+		-->
+		
+		<p>
+			<ul>
+				<li>2012/12/08 <a href="https://dl.dropbox.com/u/1995696/impress.js/2012-12-08-clonezilla.html#/bored">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活 by chusiang | impress.js</a></li>
+			</ul>
+		</p>
 
 <h3>Designer Templates</h3>
 
