--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <pre><code>$ git clone git://github.com/chusiang/impress.js.git
 $ cd impress.js/
 $ git checkout gh-pages
-$ firefox impress.js/index.html
+$ firefox index.html
 </code></pre>
 
 		<h4>藉由 wget 下載</h4>
