--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@ $ firefox impress.js-gh-pages/index.html
 
       <footer>
 		  <p>
-			  Power by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>, <a href="https://github.com/broccolini/dinky" target="_blank">Dinky theme</a> and <a href="http://github.com/chusiang" target="_blank">chusiang</a>.
+			  Power by <a href="http://github.com/chusiang" target="_blank">chusiang</a> with <a href="http://pages.github.com/" target="_blank">GitHub Pages</a> and <a href="https://github.com/broccolini/dinky" target="_blank">Dinky theme</a>.
 		  </p>
 	  </footer>
 
     </div>
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
   </body>
 </html>
