--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>歡迎光臨</h3>
 
 		<p>
-			這裡將匯整<a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">凍仁</a>使用 <a href="https://github.com/bartaz/impress.js">impress.js</a> 所建置的簡報，並透過 <a href="https://github.com" target="_blank">Github</a> 來同步本機及網際網路上的檔案。
+			這裡將匯整<a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">凍仁</a>使用 <a href="https://github.com/bartaz/impress.js">impress.js</a> 所建置的簡報，並透過 <a href="https://github.com" target="_blank">GitHub</a> 來同步本機及網際網路上的檔案。
 		</p>
 
 		<h3>線上觀看</h3>
@@ -72,7 +72,7 @@ $ firefox impress.js-gh-pages/index.html
 
       <footer>
 		  <p>
-			  Power by <a href="http://github.com/chusiang" target="_blank">chusiang</a> with <a href="http://pages.github.com/" target="_blank">GitHub Pages</a> and <a href="https://github.com/broccolini/dinky" target="_blank">Dinky theme</a>.
+			  Power by <a href="http://github.com/chusiang" target="_blank">chusiang</a> with <a href="http://pages.github.com/" target="_blank" title="GitHub Pages">GitHub Pages</a> and <a href="https://github.com/broccolini/dinky" target="_blank" title="Dinky theme">Dinky</a>.
 		  </p>
 	  </footer>
 
