--- a/2012-12-08-clonezilla.html
+++ b/2012-12-08-clonezilla.html
@@ -68,7 +68,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活 by chusiang | impress.js</title>
+    <title>使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活 | chusiang</title>
     
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
     <meta name="author" content="Bartek Szopka" />
@@ -318,7 +318,7 @@
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="6300" data-z="-50" data-rotate="360" data-scale="2">
 		<q>
-			此簡報使用 <a href="http://github.com/bartaz/impress.js">impress.js</a> <span class="noticed">製作</span>。
+			此簡報使用 <a href="http://github.com/bartaz/impress.js" target="_blank">impress.js</a> <span class="noticed">製作</span>。
 		</q>
     </div>
 
