--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>chusiang | Impress.js</title>
+    <title>impress.js #chusiang</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Impress.js</h1>
+        <h1 class="header">impress.js</h1>
         <p class="header">It's a presentation framework based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com.</p>
 
         <ul>
@@ -30,10 +30,12 @@
 
       </header>
       <section>
+		<h2>impress.js #chusiang</h2>
+
         <h3>歡迎光臨</h3>
 
 		<p>
-			這裡將匯整<a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">凍仁</a>使用 <a href="https://github.com/bartaz/impress.js">impress.js</a> 所建置的簡報，並透過 <a href="https://github.com" target="_blank">GitHub</a> 來同步本機及網際網路上的檔案。
+			這裡將匯整<a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">凍仁</a>使用 <a href="https://github.com/bartaz/impress.js">impress.js</a> 建置的簡報，並透過 <a href="https://github.com" target="_blank">GitHub</a> 來同步本機及網際網路上的檔案。
 		</p>
 
 		<h3>線上觀看</h3>
@@ -43,9 +45,9 @@
 		</p>
 
 		<ul>
-			<li>2013/04/20 - <a href="2013-04-20-d7-multi-site.html#/bored" target="_blank">Multi-site on Drupal 7</a></li>
-			<li>2013/02/27 - <a href="2013-02-27-about-me.html#/bored" target="_blank">關於 "賴楚翔"</a></li>
-			<li>2012/12/08 - <a href="2012-12-08-clonezilla.html#/bored" target="_blank">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活</a></li>
+			<li><a href="2013-04-20-d7-multi-site.html#/bored" target="_blank">Multi-site on Drupal 7</a> #2013/04/20</li>
+			<li><a href="2013-02-27-about-me.html#/bored" target="_blank">關於 "賴楚翔"</a> - 2013/02/27</li>
+			<li><a href="2012-12-08-clonezilla.html#/bored" target="_blank">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活</a> #2012/12/08</li>
 		</ul>
 
 		<h3>離線下載</h3>
