--- a/index.html
+++ b/index.html
@@ -56,23 +56,25 @@
 			若您想下載所有簡報並稍後觀看，您可以使用以下方式下載。
 		</p>
 
-		<h4>藉由 Git 下載</h4>
-
-<pre><code>$ git clone git://github.com/chusiang/impress.js.git
-$ cd impress.js/
-$ git checkout gh-pages
-$ firefox index.html
+		<ol>
+			<li>藉由 Git 下載 <br />
+			
+<pre><code>git clone git://github.com/chusiang/impress.js.git
+cd impress.js/
+git checkout gh-pages
+firefox index.html
 </code></pre>
-
-		<h4>藉由 wget 下載</h4>
-
-<pre><code>$ wget <a href="https://github.com/chusiang/impress.js/archive/gh-pages.zip">https://github.com/chusiang/impress.js/archive/gh-pages.zip</a>
-$ unzip gh-pages.zip 
-$ firefox impress.js-gh-pages/index.html
+			</li>
+			<li>藉由 wget 下載 <br />
+			
+<pre><code>wget <a href="https://github.com/chusiang/impress.js/archive/gh-pages.zip">https://github.com/chusiang/impress.js/archive/gh-pages.zip</a>
+unzip gh-pages.zip 
+firefox impress.js-gh-pages/index.html
 </code></pre>
+			</li>
+		</ol>
 
       </section>
-
       <footer>
 		  <p>
 			  Power by <a href="http://github.com/chusiang" target="_blank">chusiang</a> with <a href="http://pages.github.com/" target="_blank" title="GitHub Pages">GitHub Pages</a> and <a href="https://github.com/broccolini/dinky" target="_blank" title="Dinky theme">Dinky</a>.
