--- a/2013-02-27-about-me.html
+++ b/2013-02-27-about-me.html
@@ -360,7 +360,7 @@
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="6300" data-z="-50" data-rotate="360" data-scale="2">
 		<q>
-			此簡報使用 <a href="http://github.com/bartaz/impress.js" target="_blank">impress.js</a> <span class="noticed">製作</span>。
+			此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>。
 		</q>
     </div>
 
