--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		</p>
 
 		<ul>
-			<li><a href="2013-04-20-d7-multi-site.html#/bored" target="_blank">Multi-site on Drupal 7</a> #2013/04/20</li>
+			<li><a href="2013-04-20-d7-multi-site.html#/bored" target="_blank">使用 multi-sites 技術快速建置多 Drupal 網站</a> - 2013/04/20</li>
 			<li><a href="2013-02-27-about-me.html#/bored" target="_blank">關於 "賴楚翔"</a> - 2013/02/27</li>
-			<li><a href="2012-12-08-clonezilla.html#/bored" target="_blank">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活</a> #2012/12/08</li>
+			<li><a href="2012-12-08-clonezilla.html#/bored" target="_blank">使用 Clonezilla (再生龍) 打造不死的 Ubuntu 生活</a> - 2012/12/08</li>
 		</ul>
 
 		<h3>離線下載</h3>
