--- a/2013-04-20-d7-multi-site.html
+++ b/2013-04-20-d7-multi-site.html
@@ -303,7 +303,7 @@
     -->
     <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
 		<p>
-			將多個 Domain name 指到同一個 Drupal 目錄，並設定對應的 Database 及 <a href="http://zh.wikipedia.org/wiki/%E8%99%9A%E6%8B%9F%E4%B8%BB%E6%9C%BA">Virtual host</a> (讓同一個網頁伺服器使用多個 Domain name 的技術)。
+			將多個 Domain name 指到同一個 Drupal 目錄 (ex. /var/www/drupal)，並設定對應的 Database 及 <a href="http://zh.wikipedia.org/wiki/%E8%99%9A%E6%8B%9F%E4%B8%BB%E6%9C%BA">Virtual host</a> (讓同一個網頁伺服器使用多個 Domain name 的技術)。
 		</p>
     </div>
 
@@ -379,8 +379,13 @@
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="6300" data-z="-50" data-rotate="360" data-scale="2">
 		<q>
-			此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>。 <br />
-<br />
+			- 此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>。 <br />
+
+			- 短網址 <a href="http://goo.gl/GZBiE">http://goo.gl/GZBiE</a> <br />
+
+			- <a href="https://www.dropbox.com/s/p8ubll2t3dw4ydm/Mutlisites%20on%20Drupal%207.png">心智圖</a> 筆記。 <br />
+
+
 			<p align="right">The End</p>
 		</q>
     </div>
