fix at sort link

--- a/2013-04-20-d7-multi-site.html
+++ b/2013-04-20-d7-multi-site.html
@@ -381,7 +381,7 @@
 		<q>
 			- 此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>。 <br />
 
-			- 短網址 <a href="http://goo.gl/GZBiE">http://goo.gl/GZBiE</a> <br />
+			- 短網址 <a href="http://goo.gl/k0gzt">http://goo.gl/k0gzt</a> <br />
 
 			- <a href="https://www.dropbox.com/s/p8ubll2t3dw4ydm/Mutlisites%20on%20Drupal%207.png">心智圖</a> 筆記。 <br />
 
