remove mlms site and add portal.ubuntu-tw.net to my work.

--- a/2013-02-27-about-me.html
+++ b/2013-02-27-about-me.html
@@ -199,7 +199,7 @@
 
     <div class="step slide" data-x="1000" data-y="-1500">
 		<q>
-			- 現階段主攻 HTML, PHP, MySQL, Javascript 網頁技術。
+			- 現階段主攻 HTML, PHP, MySQL, Drupal ... 等網頁技術。
 		</q>
     </div>
 
@@ -259,14 +259,14 @@
         
     -->
     <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-		<p>
+			<p>
 			<center>
-			- 多媒體數位學習網 <br />
-				<a href="http://mlms.mis.csu.edu.tw/" target="_blank"><img src="images/2013-02-27_mlms.png" width="500" alt="http://mlms.mis.csu.tw" title="http://mlms.mis.csu.edu.tw" /></a>
+			- 正修租屋網
+				<a href="http://lgd.csu.edu.tw:8080/" target="_blank"><img src="images/2013-02-27_rent.png" width="500" alt="http://lgd.csu.tw:8080" title="http://lgd.csu.edu.tw:8080" /></a>
 			</center>
-			<br />
-			2008 年至今<b class="positioning">維護</b>的網站
-		</p>
+
+			2012 年使用 HTML, <b class="positioning">CSS</b>, <b class="scaling">PHP</b>, <b class="rotating">MySQL</b> 獨立完成的網站
+			</p>
     </div>
 
     <!--
@@ -290,21 +290,6 @@
         
     -->
     <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-			<p>
-			<center>
-			- 正修租屋網
-				<a href="http://lgd.csu.edu.tw:8080/" target="_blank"><img src="images/2013-02-27_rent.png" width="500" alt="http://lgd.csu.tw:8080" title="http://lgd.csu.edu.tw:8080" /></a>
-			</center>
-
-			2012 年使用 HTML, <b class="positioning">CSS</b>, <b class="scaling">PHP</b>, <b class="rotating">MySQL</b> 獨立完成的網站
-
-			<!--
-				支援 <b class="positioning">Linux</b>, <b class="rotating">Windows</b>, <b class="scaling">Mac OSX</b>, BSD 以及 VMware ESX。
-				-->
-			</p>
-    </div>
-
-    <div id="imagination" class="step" data-x="6700" data-y="1400" data-scale="6">
 		<p>
 			<center>
 			- 正修典範科大計畫
@@ -323,6 +308,17 @@
 		</p>
     </div>
 
+    <div id="imagination" class="step" data-x="6700" data-y="1400" data-scale="6">
+		<q>
+			<center>
+			- helloTux
+				<a href="http://hellotux.drx.tw/" target="_blank"><img src="images/2013-02-27_hellotux.png" width="500" alt="http://hellotux.drx.tw" title="http://hellotux.drx.tw" /></a>
+			</center>
+
+			自已寫的 <b class="scaling">服務</b>，用來管理 Linux <b class="imagination">Package List</b>
+		</q>
+    </div>
+
 	<!--
     <div id="ing" class="step" data-x="6400" data-y="5400" data-scale="6">
     <div id="ing" class="step" data-x="6800" data-y="3600" data-scale="6">
@@ -334,11 +330,11 @@
     <div id="source" class="step" data-x="6000" data-y="4000" data-rotate="20" data-scale="4">
 		<q>
 			<center>
-			- helloTux
-				<a href="http://hellotux.drx.tw/" target="_blank"><img src="images/2013-02-27_hellotux.png" width="500" alt="http://hellotux.drx.tw" title="http://hellotux.drx.tw" /></a>
+			- DCTP2013
+				<a href="http://portal.ubuntu-tw.net/" target="_blank"><img src="images/2013-07-26-ubuntu-tw.png" width="500" alt="http://portal.ubuntu-tw.net/" title="http://portal.ubuntu-tw.net/" /></a>
 			</center>
 
-			自已寫的 <b class="scaling">服務</b>，用來管理 Linux <b class="imagination">Package List</b>
+			參與 <a href="http://2013.drupalcamp.tw/page/122">Ubuntu Taiwan 網站改造技術志工</b></a>。
 		</q>
     </div>
 
