add sort link with goo.gl.

--- a/2012-12-08-clonezilla.html
+++ b/2012-12-08-clonezilla.html
@@ -318,14 +318,14 @@
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="6300" data-z="-50" data-rotate="360" data-scale="2">
 		<q>
-			此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>。
+			此簡報使用 <a href="http://chusiang.github.io/impress.js/" target="_blank">impress.js</a> <span class="noticed">製作</span>，並己上傳至 <a href="http://goo.gl/8Z6bTS">http://goo.gl/8Z6bTS</a>。
 		</q>
     </div>
 
     <div id="its-in-3d" class="step" data-x="6200" data-y="6800" data-z="-50" data-rotate="360" data-scale="3">
-		<q>
-			凍仁翔 @ Ubuntu 12.10 Release Party
-		</q>
+		<p align="center">
+			<b>END</b>
+		</p>
     </div>
     <!--
         
