--- a/2013-02-27-about-me.html
+++ b/2013-02-27-about-me.html
@@ -68,7 +68,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>About chusiang | chusiang</title>
+    <title>About me | chusiang</title>
     
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
     <meta name="author" content="Bartek Szopka" />
@@ -166,7 +166,8 @@
     -->
     <div id="bored" class="step" data-x="-1000" data-y="-1500" data-rotate="360" data-scale="6">
 		<p>
-			關於 "<b>賴楚翔</b>" <br />
+			關於我 <br />
+      - "<b>賴楚翔</b>" <br />
 			- Chu-Siang Lai <br />
 			- 阿翔、凍仁翔、Jonny <br />
 			- <a href="mailto://chusiang.lai (at) gmail.com">chusiang.lai (at) gmail.com</a>
